--- a/src/pages/AmusementParkPage/AmusementParkPage.css
+++ b/src/pages/AmusementParkPage/AmusementParkPage.css
@@ -1,13 +1,73 @@
-.toInfoButton { 
+.location {
+    width: 100%;
+    height: 800px;
+    margin-top: 60px;
+}
+
+
+.buttons {
+    margin-top: 10px;
+
+}
+
+
+.scroll-button,
+.redirect-button {
     float: right;
     margin-right: 10px;
-    width: 140px;
+    width: 175px;
     height: 35px;
-    background-color: #38b434;
+    background-color: #214e9c;
     border: 0;
     border-radius: 5px;
     color: #fff;
     font-size: 16px;
     font-weight: 400;
     line-height: 32px;
+
+}
+
+
+
+.scroll-button:hover,
+.redirect-button:hover {
+    cursor: pointer;
+    background-color: #4371c1;
+}
+
+.otherContent {
+    border: 2px solid #b2b5ba;
+    min-width: 350px;
+    width: 400px;
+    height: auto;
+    margin-top: 40px;
+    border-radius: 3px;
+    background-color: #e2e5ed;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.otherContent .photo_item { 
+    margin-right: 0;
+}
+
+.otherContent .title { 
+    margin-top: 10px;
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+@media screen and (max-width: 900px) {
+    .location {
+        height: 550px;
+    }
+
+    .content {
+        flex-direction: column;
+    }
+    .otherContent { 
+        width: 94%;
+        margin: 0 auto;
+    }
 }
