--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-* { 
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
- 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
 }
 
 html {
@@ -45,7 +45,7 @@ html {
 
 }
 
-.headline { 
+.headline {
     width: 100%;
     font-family: "Open Sans", Arial, sans-serif;
     font-size: 34px;
@@ -53,3 +53,99 @@ html {
     color: #111111;
 }
 
+.article_images {
+    max-width: 850px;
+    border-radius: 4px;
+}
+
+.location {
+    width: 100%;
+    height: 800px;
+    margin-top: 60px;
+}
+
+
+.buttons {
+    margin-top: 10px;
+
+}
+
+
+.scroll-button,
+.redirect-button {
+    float: right;
+    margin-right: 10px;
+    width: 175px;
+    height: 35px;
+    background-color: #214e9c;
+    border: 0;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 32px;
+
+}
+
+
+.scroll-button:hover,
+.redirect-button:hover {
+    cursor: pointer;
+    background-color: #4371c1;
+}
+
+.textContent {
+    width: 800px;
+  
+    margin: 0 auto;
+}
+
+.otherContent {
+    border: 2px solid #b2b5ba;
+    min-width: 350px;
+    width: 400px;
+    height: 1110px;
+    margin-top: 40px;
+    border-radius: 3px;
+    background-color: #e2e5ed;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-left: 100px;
+}
+
+.otherContent .photo_item {
+    margin-right: 0;
+}
+
+.otherContent .title {
+    font-size: 18px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
+
+
+
+@media screen and (max-width: 900px) {
+    .article_images {
+        width: 100%;
+        height: 500px;
+        object-fit: cover;
+    }
+    .textContent {
+        width: 94%;
+    }
+
+    .location {
+        height: 550px;
+    }
+
+    .content {
+        flex-direction: column;
+    }
+
+    .otherContent {
+        width: 94%;
+        margin: 0 auto;
+    }
+}
