--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,7 @@ html {
     font-size: 16px;
     font-weight: 400;
     line-height: 32px;
-
+    margin-bottom: 5px;
 }
 
 
@@ -135,7 +135,9 @@ html {
     .textContent {
         width: 94%;
     }
-
+    .textContent h1{
+        font-size: 26px;
+    }
     .location {
         height: 550px;
     }
@@ -148,4 +150,10 @@ html {
         width: 94%;
         margin: 0 auto;
     }
+}
+@media screen and (max-height: 420px) {
+    .location {
+        height: 250px;
+    }
+
 }
